# rust-backend

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
assets/css/: styles.css
log/: config.yaml
services/auth/: .gitignore  Cargo.toml  README.md  rustfmt.toml
services/auth/dev/: graph.yuml
services/auth/log/: config.yaml
services/auth/migrations/: 20220114195611_initial.down.sql  20220114195611_initial.up.sql
services/auth/sqlite/lib/: authentication.sql  authorization.sql  main.sql  test.sql  user.sql  views.sql
services/auth/src/: db.rs  errors.rs  handlers.rs  jwt.rs  lib.rs  login.rs  middleware.rs  models.rs  role.rs  traits.rs  user.rs  util.rs
services/auth/src/models/: authentication.rs  login.rs  mod.rs  register.rs  user.rs
services/auth/tests/: setup.rs  test.rs  test_model_user.rs
services/auth/tests/db/: test.sqlite-shm  test.sqlite-wal
services/math/: .gitignore  Cargo.toml
services/math/log/: config.yaml
services/math/src/: lib.rs
services/math/src/jsonrpc/: mod.rs
services/math/tests/: integration_tests.rs
services/vehicles/: Cargo.toml  README.md
services/vehicles/src/jsonrpc/: mod.rs
services/vehicles/tests/: integration_tests.rs
src/: main.rs
src/route/handlers/: error.rs  http.rs  users.rs
src/state/: mod.rs
src/templates/: mod.rs
src/templates/http/: about.html
src/templates/users/: show.html
