[package]
name = "backend"
version = "0.1.0"
authors = ["jhaboic <josiphaboic@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-graphql = "3.0.7"
actix = "0.12.0"
actix-cors = "0.5.4"
actix-files = "0.5.0"
actix-http = "2.2.1"
actix-session = "0.4.1"
actix-web = "3.3.2"
flexbuffers = "2.0.0"
futures = "0.3.17"
futures-channel = "0.3.13"
futures-util = { version = "0.3.17", default-features = false }
http = "0.2.5"
jsonrpc_v2_client = "0.2.0"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
log = "0.4.14"
log4rs = "1.0.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.130"
serde_json = "1.0.68"
serde_urlencoded = "0.7.0"
sqlx = {version = "0.5.8", features = ["runtime-async-std-native-tls", "postgres", "migrate", "json", "sqlite"]} # runtime-actix-rustls, runtime-actix-native-tls
tera = {version="1.15.0", features=["builtins"]}

# SERVICES
math_service = {path = "./services/math"}

[dev-dependencies]
actix-rt = "2.3.0"
actix-test = "0.0.1"


[workspace]
members = [
	"./services/math",
]
