[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
chrono= "0.4.19"
jsonwebtoken = "7.2.0"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
actix-rt = "2.3.0"
actix-test = "0.0.1"