[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "2.2.1"
actix-service = "2.0.2"
actix-web = "3.3.3"
# apparch = "0.1.1"
async-trait = "0.1.52"
bcrypt = "*"
chrono= "0.4.19"
futures = "0.3.19"
jsonwebtoken = "7.2.0"
log = "0.4.14"
rs-uuid = "0.3.1"
serde = {version="1.0.133", features=["derive"]}
serde_json = "1.0.74"
sqlx = {version="0.5.7", features=["runtime-async-std-native-tls", "sqlite", "migrate", "macros"]}
thiserror = "1.0"

[dev-dependencies]
actix-rt = "2.3.0"
actix-test = "0.0.1"