[package]
name = "math_service"
version = "0.1.0"
authors = ["jhaboic <josiphaboic@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
actix-web = "3.3.2"
chrono = "0.4.19"
jsonrpc-v2 = "0.10.1"
log = "0.4.14"
log4rs = "1.0.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"

[dev-dependencies]
actix-rt = "2.3.0"
actix-test = "0.0.1"
